# Marwin

./: .gitignore  LICENSE  PREREQS.md  README.md  SMOKE-TEST.md  config.example.yaml  pyproject.toml  requirements.txt
kaggle/: kernel-metadata.json  kernel.py
marwin/: agents.py  analyze.py  chunks.py  claude_runner.py  cli.py  config.py  ffmpegw.py  kaggle_runner.py  meetings.py  merge.py  minutes.py  normalize.py  recorder.py  transcript.py
marwin/dashboard/: app.py
tests/: test_agents.py  test_analyze.py  test_chunks.py  test_claude_runner.py  test_cli.py  test_config.py  test_ffmpegw.py  test_import.py  test_kaggle_runner.py  test_meetings.py  test_merge.py  test_minutes.py  test_normalize.py  test_recorder.py  test_transcript.py
