[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "marwin"
version = "0.1.0"
description = "Personal meeting intelligence copilot"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
marwin = "marwin.cli:main"

[tool.setuptools.packages.find]
include = ["marwin*"]
